force-app/main/default/objects/Case/fields/Process_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Trigger_Date__c</fullName>
    <inlineHelpText>Tool to trigger processes from scheduled flows (works in tandem with Process Trigger Text)</inlineHelpText>
    <label>Process Trigger Date</label>
    <type>Date</type>
</CustomField>