force-app/main/default/objects/Case/fields/Process_Trigger_Text__c.field-meta.xml
<CustomField>
    <fullName>Process_Trigger_Text__c</fullName>
    <inlineHelpText>Tool to trigger processes from scheduled flows (works in tandem with Process Trigger Date)</inlineHelpText>
    <label>Process Trigger Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>