force-app/main/default/objects/Case/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Is the device registered?</inlineHelpText>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>