force-app/main/default/objects/Case/fields/Related_invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>Is this issue about a specific invoice? if so.. look it up!</inlineHelpText>
    <label>Related Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>