force-app/main/default/objects/Case/fields/Resynced__c.field-meta.xml
<CustomField>
    <fullName>Resynced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resynced</label>
    <type>Checkbox</type>
</CustomField>