force-app/main/default/objects/Case/fields/Router__c.field-meta.xml
<CustomField>
    <fullName>Router__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What model of router is the customer using?</inlineHelpText>
    <label>Router</label>
    <length>255</length>
    <type>Text</type>
</CustomField>