force-app/main/default/objects/Case/fields/SatisfactionMigrated__c.field-meta.xml
<CustomField>
    <fullName>SatisfactionMigrated__c</fullName>
    <description>Custevent15 from Netsuite</description>
    <inlineHelpText>Was the customer satisfied? Migrated from Netsuite - do not fill!</inlineHelpText>
    <label>Satisfaction (Migrated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>