force-app/main/default/objects/Case/fields/Service_Type_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Onboarding__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>What part of onboarding is this issue about? It is usually pre-filled.</inlineHelpText>
    <label>Type (Onboarding)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardreader Config</fullName>
            </value>
            <value>
                <fullName>Menue / Backup</fullName>
            </value>
            <value>
                <fullName>My.Ob Setup</fullName>
            </value>
            <value>
                <fullName>Service Staff Briefing</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
                <default>true</default>
                <label>Welcome Call</label>
            </value>
            <value>
                <fullName>Wrap Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>