force-app/main/default/objects/Case/fields/SolutionDate__c.field-meta.xml
<CustomField>
    <fullName>SolutionDate__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>When should the issue be solved? Usually about bugs.</inlineHelpText>
    <label>Solution Date</label>
    <type>Date</type>
</CustomField>