force-app/main/default/objects/Case/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <inlineHelpText>Sub-Category of this case. Depends on Category</inlineHelpText>
    <label>SubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apple Devices</fullName>
            </value>
            <value>
                <fullName>Bill/Docket</fullName>
            </value>
            <value>
                <fullName>Cardreader</fullName>
            </value>
            <value>
                <fullName>Cash Drawer &amp; Components</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Device Integration</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exports</fullName>
            </value>
            <value>
                <fullName>First Steps</fullName>
            </value>
            <value>
                <fullName>Fiscal Trust</fullName>
            </value>
            <value>
                <fullName>Food Notify</fullName>
            </value>
            <value>
                <fullName>Guest Wifi</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Internal Wifi</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Lunchio</fullName>
            </value>
            <value>
                <fullName>Masterdata</fullName>
            </value>
            <value>
                <fullName>Menu Service</fullName>
            </value>
            <value>
                <fullName>my.orderbird</fullName>
            </value>
            <value>
                <fullName>myOB</fullName>
            </value>
            <value>
                <fullName>No Account</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Online Shop</fullName>
            </value>
            <value>
                <fullName>Open Orders</fullName>
            </value>
            <value>
                <fullName>Ordering Pad</fullName>
            </value>
            <value>
                <fullName>orderpad</fullName>
            </value>
            <value>
                <fullName>Other (see comments)</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>