force-app/main/default/objects/Case/fields/SuperscaleLink__c.field-meta.xml
<CustomField>
    <fullName>SuperscaleLink__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Is there a &quot;superscale&quot; link that could be helpful to investigate, monitor or resolve the issue?</inlineHelpText>
    <label>Superscale Link</label>
    <type>Url</type>
</CustomField>