force-app/main/default/objects/Case/fields/Survey_Taken__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken__c</fullName>
    <label>Survey Taken</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>