force-app/main/default/objects/Case/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <formula>IF( ISBLANK(Account.Target_Product__c), &apos;PRO&apos;, Account.Target_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Product</label>
    <type>Text</type>
</CustomField>