force-app/main/default/objects/Case/fields/Template_Branding__c.field-meta.xml
<CustomField>
    <fullName>Template_Branding__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-3198</description>
    <formula>&apos;&apos; /*
IF(NOT(ISBLANK(Account.Id)),Account.Template_Branding__c,IF(ISPICKVAL( Origin,&apos;E-Mail MINI&apos;),&apos;MINI&apos;,&apos;PRO&apos;))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Branding</label>
    <type>Text</type>
</CustomField>