force-app/main/default/objects/Case/fields/Threading_Constant__c.field-meta.xml
<CustomField>
    <fullName>Threading_Constant__c</fullName>
    <formula>&quot;b2xpdmVy&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Threading Constant</label>
    <type>Text</type>
</CustomField>