force-app/main/default/objects/Case/fields/ToolsLink__c.field-meta.xml
<CustomField>
    <fullName>ToolsLink__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Is there a &quot;tools&quot; link to the venue that could be helpful to investigate, monitor or resolve the issue?</inlineHelpText>
    <label>Tools Link</label>
    <type>Url</type>
</CustomField>