force-app/main/default/objects/Case/fields/TriggerCloseCase__c.field-meta.xml
<CustomField>
    <fullName>TriggerCloseCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerCloseCase</label>
    <type>Checkbox</type>
</CustomField>