force-app/main/default/objects/Case/fields/Upselling_due_on__c.field-meta.xml
<CustomField>
    <fullName>Upselling_due_on__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1277</description>
    <label>Upselling due on</label>
    <type>DateTime</type>
</CustomField>