force-app/main/default/objects/Case/fields/VenueID__c.field-meta.xml
<CustomField>
    <fullName>VenueID__c</fullName>
    <description>Field to establish relationship of new created cases with their related accounts using the MyOb connection</description>
    <label>Venue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>