force-app/main/default/objects/Case/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <description>Stakeholder: CS</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>INCOMPLETE: This one does not work, now does it?</inlineHelpText>
    <label># of Activities</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>