force-app/main/default/objects/Case/fields/Zendesk_Email__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Email__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2705</description>
    <label>Zendesk Email</label>
    <type>Email</type>
</CustomField>