force-app/main/default/objects/Case/fields/Zendesk_message__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_message__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2705</description>
    <label>Zendesk message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>