force-app/main/default/objects/Case/recordTypes/Case_ChatBot.recordType-meta.xml
<RecordType>
    <fullName>Case_ChatBot</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>All the cases created via the chatbot</description>
    <label>Case: ChatBot</label>
</RecordType>