force-app/main/default/objects/Case/recordTypes/Finance_Case.recordType-meta.xml
<RecordType>
    <fullName>Finance_Case</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Cases to be handled by finance team</description>
    <label>Finance Case</label>
</RecordType>