force-app/main/default/objects/Case/recordTypes/issue_Pay.recordType-meta.xml
<RecordType>
    <fullName>issue_Pay</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Pay Issue: Cardreader Config</description>
    <label>Issue: Pay</label>
</RecordType>