force-app/main/default/objects/Case/recordTypes/Issue_Satisfaction_Call.recordType-meta.xml
<RecordType>
    <fullName>Issue_Satisfaction_Call</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Issue: Satisfaction Case</label>
</RecordType>