force-app/main/default/objects/Case/recordTypes/Issue_Tech_Support.recordType-meta.xml
<RecordType>
    <fullName>Issue_Tech_Support</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Tech Support Issues.</description>
    <label>Issue: Tech Support</label>
</RecordType>