force-app/main/default/objects/Case/recordTypes/Issue_Termination_Downgrade.recordType-meta.xml
<RecordType>
    <fullName>Issue_Termination_Downgrade</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Termination/ Downgrade Issues.</description>
    <label>Retired-Issue: Termination/ Downgrade</label>
</RecordType>