force-app/main/default/objects/Case/recordTypes/Issue_Upselling.recordType-meta.xml
<RecordType>
    <fullName>Issue_Upselling</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Termination/ Downgrade Issues</description>
    <label>Issue: Upselling</label>
</RecordType>