force-app/main/default/objects/Case/recordTypes/Onboarding_Issue_Menue_Backup.recordType-meta.xml
<RecordType>
    <fullName>Onboarding_Issue_Menue_Backup</fullName>
    <active>true</active>
    <businessProcess>Menu</businessProcess>
    <description>Record Type for Onboarding Issue: Menue / Backup</description>
    <label>Onboarding Issue: Menue / Backup</label>
</RecordType>