force-app/main/default/objects/Case/recordTypes/Service_Case_General_Standard.recordType-meta.xml
<RecordType>
    <fullName>Service_Case_General_Standard</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Cases except Onboarding-related Cases.</description>
    <label>Case: General/ Standard</label>
</RecordType>