force-app/main/default/objects/Case/recordTypes/Service_Case_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Service_Case_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Onboarding</businessProcess>
    <description>Record Type for Onboarding-related Cases.</description>
    <label>Case: Onboarding</label>
</RecordType>