force-app/main/default/objects/Case/recordTypes/Service_Issue_Damage_Report.recordType-meta.xml
<RecordType>
    <fullName>Service_Issue_Damage_Report</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Damage Report Issues.</description>
    <label>Retired-Issue: Damage Report</label>
</RecordType>