force-app/main/default/objects/Case/recordTypes/Service_Issue_Dunning.recordType-meta.xml
<RecordType>
    <fullName>Service_Issue_Dunning</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Data Account Issues.</description>
    <label>Retired-Issue: Data Account</label>
</RecordType>