force-app/main/default/objects/Case/recordTypes/Service_Issue_Invoicing.recordType-meta.xml
<RecordType>
    <fullName>Service_Issue_Invoicing</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Record Type for Invoicing Issues.</description>
    <label>Retired-Issue: Invoicing</label>
</RecordType>