force-app/main/default/objects/Case/recordTypes/SFDC_Support.recordType-meta.xml
<RecordType>
    <fullName>SFDC_Support</fullName>
    <active>true</active>
    <businessProcess>SFDC Support</businessProcess>
    <label>SFDC Support</label>
</RecordType>