force-app/main/default/objects/Case/validationRules/Closed_Date_Cannot_Be_Before_Opened_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_Cannot_Be_Before_Opened_Date</fullName>
    <active>true</active>
    <description>Validates that the Case Closed Date does not come before Opened Date.</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
CreatedDate  &gt;  ClosedDate
)</errorConditionFormula>
    <errorDisplayField>ClosedDate</errorDisplayField>
    <errorMessage>Closed Date Cannot Be Before Opened Date.</errorMessage>
</ValidationRule>