force-app/main/default/objects/Case/validationRules/Offer_Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Feedback</fullName>
    <active>true</active>
    <errorConditionFormula>$UserRole.Id &lt;&gt; &apos;00E58000000RqZE&apos;
&amp;&amp;
ISPICKVAL(Sales_NPS_Internal__c, &quot;&quot;)
&amp;&amp; 
ISPICKVAL(Status, &quot;Closed&quot;)
&amp;&amp;
 RecordTypeId = &quot;01258000000FAvx&quot;</errorConditionFormula>
    <errorMessage>Please provide an answer to the question: How likely is it that you would spend a coffee to the sales rep for his work?</errorMessage>
</ValidationRule>