force-app/main/default/objects/Case/validationRules/Prevent_Case_Saving_Inactive_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Case_Saving_Inactive_Contact</fullName>
    <active>true</active>
    <description>This uses a custom checkbox field on contacts called inactive employee.</description>
    <errorConditionFormula>AND( 

Contact.inactiveEmployee__c,
NOT( RecordType.Id = &apos;012580000002RGo&apos;),
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )), 
NOT(IsClosed))</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Unable to save this case because the related contact is no longer with the company. To continue, choose another contact.</errorMessage>
</ValidationRule>