force-app/main/default/objects/Case/validationRules/Prevent_Case_Status_reset_to_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Case_Status_reset_to_Open</fullName>
    <active>false</active>
    <description>If a case is already processed from an agent, prevents the Status from being changed back to “Open”.</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
ISCHANGED( Status ),
NOT(ISPICKVAL(PRIORVALUE( Status ), &quot;Open&quot;)),
ISPICKVAL( Status, &quot;Open&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Case Status cannot be reset to &quot;Open&quot;.</errorMessage>
</ValidationRule>