force-app/main/default/objects/Case/validationRules/Prevent_Milest_Compl_Before_Case_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Milest_Compl_Before_Case_Create</fullName>
    <active>false</active>
    <description>Validates that the milestone&apos;s Completion Date has occurred after
the case&apos;s Date/Time Opened.</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
true
)</errorConditionFormula>
    <errorMessage>The milestone Completion Date must occur after the date the case was
created and before the case was closed.</errorMessage>
</ValidationRule>