force-app/main/default/objects/Case/validationRules/Prevent_Milestone_Compl_Closed_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Milestone_Compl_Closed_Cases</fullName>
    <active>false</active>
    <description>Validates that a milestone&apos;s Completion Date can&apos;t occur after the
case&apos;s Status is Closed.</description>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users ,  $User.Id )),
IsClosed = true
)</errorConditionFormula>
    <errorMessage>You can&apos;t complete a milestone after a case is closed.</errorMessage>
</ValidationRule>