force-app/main/default/objects/Case/validationRules/Prevent_using_AccM_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_using_AccM_Queue</fullName>
    <active>true</active>
    <description>https://jira.orderbird.com/browse/CDS-1196</description>
    <errorConditionFormula>OwnerId = &apos;00G58000001Oj3e&apos;</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Do not use Account Management as Case Owner!</errorMessage>
</ValidationRule>