force-app/main/default/objects/Case/listViews/Account_Specialists.listView-meta.xml
<ListView>
    <fullName>Account_Specialists</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open,On Hold,Waiting for Customer Reply,Re-Open,Escalated</value>
    </filters>
    <label>Account Specialists</label>
    <queue>Account_Specialists</queue>
    <sharedTo>
        <roleAndSubordinates>Support_Management</roleAndSubordinates>
    </sharedTo>
</ListView>