force-app/main/default/objects/Case/listViews/Agent_Chat_Bots_Case.listView-meta.xml
<ListView>
    <fullName>Agent_Chat_Bots_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agent_Chat_Bot</label>
    <queue>Agent_Chat_Bots</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>