force-app/main/default/objects/Case/listViews/Alex_Incoming_Cases.listView-meta.xml
<ListView>
    <fullName>Alex_Incoming_Cases</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Customer Success,Guestmanagement</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold,Re-Open,Waiting for Customer Reply,Open,New</value>
    </filters>
    <label>Alex Incoming Cases</label>
</ListView>